# The-Document-Intelligence-Refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  main.py  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/extractions/: lowconf-366f76c5e915.json  lowconf-9e393515994e.json
.refinery/profiles/: lowconf-366f76c5e915.json  lowconf-9e393515994e.json
docs/: FINAL_REPORT.md  REPORT_FINAL_SECTIONS.md
rubric/: extraction_rules.yaml
src/agents/: chunker.py  extractor.py  fact_table.py  indexer.py  query_agent.py  triage.py
src/models/: schemas.py
src/refinery/: cli.py  config.py  demo_corpus.py  utils.py  vector_store.py
src/strategies/: base.py  fast_text.py  layout_pdfplumber.py  vision_openrouter.py
tests/: test_triage_and_router.py
